--- a/index.html
+++ b/index.html
@@ -868,13 +868,15 @@
 
 
     <td rowspan="3" width="15%">&nbsp;</td>
-    <td style="text-align:center" width="70%"><br><br><span style="font-size: 22px; color: #0079c1; font-family: Bree-Peru-Bold; text-align:center; line-height:24px"><b>Los viajes con mascotas, una demanda en aumento</b><br>
+    <td style="text-align:center" width="70%"><br><br><span style="font-size: 22px; color: #0079c1; font-family: Bree-Peru-Bold; text-align:center; line-height:24px"><b>El impacto de las vacunas en los viajes por vacaciones
+
+</b><br>
 </span></td>
     <td rowspan="3" width="15%">&nbsp;</td>
   </tr>
   <tr>
     <td><p style="font-size: 14px; color: #3f3f3f; font-family: Open sans; text-align:center"><br>
-      Conoce por qué cada vez más personas querrían emprender una travesía con sus mascotas y qué servicios esperarían de los alojamientos.
+      Un 91 % de quienes visitarán un destino internacional asegura que la vacuna fue clave en su decisión.
 </p>
       <span style="font-size: 14px; color: #3f3f3f; font-family: Bree-Peru-Lt; text-align:left">
       <p>&nbsp;</p>
@@ -925,13 +927,16 @@
 
 
     <td rowspan="3" width="15%">&nbsp;</td>
-    <td style="text-align:center" width="70%"><br><br><span style="font-size: 22px; color: #0079c1; font-family: Bree-Peru-Bold; text-align:center; line-height:24px"><b>4 tendencias clave en el turismo de experiencia </b><br>
+    <td style="text-align:center" width="70%"><br><br><span style="font-size: 22px; color: #0079c1; font-family: Bree-Peru-Bold; text-align:center; line-height:24px"><b>Consejos para impulsar tu negocio turístico en Instagram
+
+</b><br>
 </span></td>
     <td rowspan="3" width="15%">&nbsp;</td>
   </tr>
   <tr>
     <td style="text-align:center"><span style="font-size: 14px; color: #3f3f3f; font-family: Open sans; text-align:center; font-weight:lighter"><br>
-    Explora los cambios que empiezan a verse en la demanda turística de quienes buscan disfrutar de experiencias memorables durante sus viajes.
+    Los usuarios interactúan 21 veces más con los posts de esta red que con los de Facebook.
+
 
          <p>&nbsp;</p></span>
       </td>
