--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
 <!--Video-->
 
 <table width="650px" cellpadding="0" cellspacing="0" border="0" margin="0" align="center" style="border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; max-width: 650px; background-color:#FFF; margin:0; text-align:center"><tr>
-  <td colspan="3"><br>
+  <td colspan="3"><img src="assets/img/end.jpg" width="706" height="91"/>&nbsp;<br>
     <a href="https://www.promperu.gob.pe/turismoin/Boletines/2021/mar/0_conociendo_a_las_potenciales_vacacionistas_peruanas.html"><img src="https://www.promperu.gob.pe/turismoin/Boletines/2021/mar/assets/img/vid.jpg" width="100%" height="auto"/></a></td></tr>
 
  <tr></table>
